--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,3 @@
-
-
 html {
   height: 100%;
 }
@@ -76,13 +74,13 @@ body {
 }
 
 .overlay {
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-	background: white;
-	z-index: -1;
+height: 100%;
+width: 100%;
+top: 0;
+left: 0;
+position: fixed;
+background: white;
+z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
@@ -102,6 +100,10 @@ a.category-badge > span.badge:hover {
 .update-link,
 .remove-item {
   cursor: pointer;
+}
+
+input[name='q']::placeholder {
+  color: #aab7c4;
 }
 
 /* ------------------------------- bootstrap toasts */
@@ -235,6 +237,34 @@ color: #fff;
 color: #17a2b8; /* text-info */
 }
 
+/* Product Form */
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+  border-radius: 0;
+  border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+  background-color: #dc3545;
+  border-color: #dc3545;
+  border-radius: 0;
+}
+
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
@@ -250,7 +280,6 @@ color: #17a2b8; /* text-info */
       padding-top: 164px;
   }
 }
-
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
